基本实现对热点进行监控